; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_orion_wdt.c_orion_wdt_clock_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_orion_wdt.c_orion_wdt_clock_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.orion_watchdog = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*, %struct.orion_watchdog*)* @orion_wdt_clock_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @orion_wdt_clock_init(%struct.platform_device* %0, %struct.orion_watchdog* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.platform_device*, align 8
  %5 = alloca %struct.orion_watchdog*, align 8
  %6 = alloca i32, align 4
  store %struct.platform_device* %0, %struct.platform_device** %4, align 8
  store %struct.orion_watchdog* %1, %struct.orion_watchdog** %5, align 8
  %7 = load %struct.platform_device*, %struct.platform_device** %4, align 8
  %8 = getelementptr inbounds %struct.platform_device, %struct.platform_device* %7, i32 0, i32 0
  %9 = call i32 @clk_get(i32* %8, i32* null)
  %10 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %11 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %10, i32 0, i32 0
  store i32 %9, i32* %11, align 4
  %12 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %13 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i64 @IS_ERR(i32 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %2
  %18 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %19 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @PTR_ERR(i32 %20)
  store i32 %21, i32* %3, align 4
  br label %42

22:                                               ; preds = %2
  %23 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %24 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @clk_prepare_enable(i32 %25)
  store i32 %26, i32* %6, align 4
  %27 = load i32, i32* %6, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %29, label %35

29:                                               ; preds = %22
  %30 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %31 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @clk_put(i32 %32)
  %34 = load i32, i32* %6, align 4
  store i32 %34, i32* %3, align 4
  br label %42

35:                                               ; preds = %22
  %36 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %37 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %36, i32 0, i32 0
  %38 = load i32, i32* %37, align 4
  %39 = call i32 @clk_get_rate(i32 %38)
  %40 = load %struct.orion_watchdog*, %struct.orion_watchdog** %5, align 8
  %41 = getelementptr inbounds %struct.orion_watchdog, %struct.orion_watchdog* %40, i32 0, i32 1
  store i32 %39, i32* %41, align 4
  store i32 0, i32* %3, align 4
  br label %42

42:                                               ; preds = %35, %29, %17
  %43 = load i32, i32* %3, align 4
  ret i32 %43
}

declare dso_local i32 @clk_get(i32*, i32*) #1

declare dso_local i64 @IS_ERR(i32) #1

declare dso_local i32 @PTR_ERR(i32) #1

declare dso_local i32 @clk_prepare_enable(i32) #1

declare dso_local i32 @clk_put(i32) #1

declare dso_local i32 @clk_get_rate(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
